--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
 
     <section id="about-me">
         <div class="section-container">
-            <div class="section-text fade-in-left">
+            <div class="section-text fade-in-left about-description">
                 <h2>Обо мне: Постникова Людмила</h2>
                 <ul>
                     <li>Практикующий психолог с опытом работы в сфере более трех лет.</li>
